fixed mobile view menu not clickable - z-index

--- a/server/public/css/menu.css
+++ b/server/public/css/menu.css
@@ -3,6 +3,10 @@
     display: none;
 }
 
+.menu {
+    z-index: 9999;
+}
+
 /*----- Menu -----*/
 @media screen and (min-width: 860px) {
     .menu {
